# pynet

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
framework/cli/commands/: create.py
framework/core/: context.py  generator.py
pynet/: __init__.py  __version__.py
pynet/admin/: __init__.py  app.py
pynet/admin/commands/: __init__.py  client.py  token.py
pynet/cli/: __init__.py  app.py
pynet/cli/commands/: __init__.py  create.py  sync.py
pynet/cli/utils/: interactive.py
pynet/core/: __init__.py  auth.py  context.py  generator.py  globals.py  templates.py
pynet/core/backends/: __init__.py  azure_kv.py  base.py
pynet/libs/db/: __init__.py  base.py  config.py  factory.py
pynet/libs/db/drivers/: sqlserver.py
pynet/sdk/: __init__.py
pynet/templates/: .gitkeep
pynet/templates/basic/: README.md.j2  pyproject.toml.j2
pynet/templates/basic/app/config/: settings.yaml.j2
pynet/templates/basic/app/db/: connection.py.j2
pynet/templates/basic/src/: main.py.j2
pynet/templates/basic/src/db/: connection.py.j2
pynet/templates/rpa/: .env.j2
pynet/templates/rpa/Config/: database.py.j2  settings.py.j2
pynet/templates/rpa/HU/: HUXX_Namehu.py.j2
pynet/utils/: __init__.py  exceptions.py  files.py
tests/: test_admin_cli.py  test_auth.py  test_cli.py
