[project]
name = "pynet"
version = "0.1.0"
description = "Framework CLI para inicializacion de proyectos de python en NetApplications"
dependencies = [
    "typer>0.9.0",
    "rich>13.7",
    "jinja2>3.1.0",
    "python-dotenv>1.0.0",
    "PyYAML>6.0"
]
[project.optional-dependencies]
database = [
    "pyodbc>5.3.0",
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=8.0"
]
[project.scripts]
pynet = "pynet.cli.app:app"

[tool.setuptools.package-data]
pynet = ["templates/**/*"]
